--- a/src/Modaularity.AspNetCore/Modaularity.AspNetCore/Modaularity.AspNetCore.csproj
+++ b/src/Modaularity.AspNetCore/Modaularity.AspNetCore/Modaularity.AspNetCore.csproj
@@ -24,6 +24,11 @@
 		</None>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+	  <PackageReference Include="Modaularity" Version="0.0.1-preview001" />
+	</ItemGroup>
+
 	<Target Name="PrepareReleaseNotes" BeforeTargets="GenerateNuspec">
 		<PropertyGroup>
 			<PackageDescription>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/../../../RELEASE-NOTES"))</PackageDescription>
