Actualización de librería principal

--- a/src/Modaularity.AspNetCore/Modaularity.AspNetCore/Modaularity.AspNetCore.csproj
+++ b/src/Modaularity.AspNetCore/Modaularity.AspNetCore/Modaularity.AspNetCore.csproj
@@ -25,8 +25,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
-	  <PackageReference Include="Modaularity" Version="0.0.1-preview001" />
+	  <PackageReference Include="Modaularity" Version="0.0.1-preview002" />
 	</ItemGroup>
 
 	<Target Name="PrepareReleaseNotes" BeforeTargets="GenerateNuspec">
